Fri Apr 12 18:00:41 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Log_Msg.h:  Added missing includes.

	* ace/Basic_Types.h:  Removed erroneous ENOMEM definition.

Fri Apr 12 10:02:58 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/Based_Pointer_T.h: 
	  Included ace/Trace.h to fix the compilation errors about
	  undeclared ACE_TRACE.

Fri Apr 12 08:56:46 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* tests/DLL_Test_Impl.cpp: 
	  Included OS_Errno.h to fix the compilation error about
	  undeclared errno.

Fri Apr 12 15:03:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Set JAVADOC_AUTOBRIEF to YES. From now on, when there is only
          javadoc style comments, there first line until the first '.' is
          used as brief comment. In the brief class description a lof of more
          methods will have a description.

        * Timer_Heap_T.h:
          Change the comment style for method remove_first from doxygen style
          to javadoc style

Fri Apr 12 13:32:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/WFMO_Reactor.h:
        * ace/Timer_List_T.h:
        * ace/Timer_Heap_T.h:
        * ace/Timer_Hash_T.h:
        * ace/Timeprobe_T.h:
          Minor improvements doxygen comments

        * ace/POSIX_Asynch_IO.h:
          Doxygen-ized some of the comments

Fri Apr 12 00:15:32 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * include/makeinclude/platform_sunos5_sunc++.GNU:
        * ace/config-sunos5.5.h:

          Reverted to status quo. If and when things go fine, I will
          re-enable them. Too many things breaking currently.

Thu Apr 11 20:37:53 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/OS.i (ftell):
        * ace/OS.h:

          Added new wrappers for ftell, fgetpos & fsetpos.

        * ACEXML/common/FileCharStream.cpp:
        * ACEXML/common/FileCharStream.h:

          Implemented the previously unavailable available() call.
